2008-02-23  Frank Ch. Eigler  <fche@elastic.org>

	* */*.exp: Change all "send \003" to "exec kill -INT -<pgrp>" in order
	to more reliably kill an inferior stap/stapio/staprun process group.

2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	* semko/fortyfive.stp: Add ".call" to exclude false (?) positives
	from inlined instances defined in header files.

2008-02-22  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/stmtvars.exp: New test for PR 5787.

2008-02-21  Will Cohen  <wcohen@redhat.com>

	* systemtap.base/beginenderror.exp: Increase timeout for slow machines.

2008-02-20  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Added tests for marker probe
	".format" component.

2008-02-19  Frank Ch. Eigler  <fche@elastic.org>

	PR5766.
	* semko/fortyfive.stp: New test.

2008-02-19  Frank Ch. Eigler  <fche@elastic.org>

	PR5771.
	* transko/one.stp: Remove, or rather, move to this ...
	* semko/zero.stp: new file.

2008-02-12  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.context/context.exp: Build temporary modules under
	build tree, to tolerate read-only source trees.
	* {args,backtrace,pid}.tcl: Corresponding changes.
	* systemtap_test_module2.c: Add a bunch of asm("")'s to prevent
	inlining even better than noinline does.

2008-02-12  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.pass1-4/buildok.exp: No longer kfail buildok/seventeen.

2008-02-07  Martin Hunt  <hunt@redhat.com>

	* systemtap.base/debugpath.exp: Remove explicit closes.
	Stap will terminate without help, and cleanup after itself.

2008-02-06  Masami Hiramatsu  <mhiramat@redhat.com>

	* systemtap.context/backtrace.tcl: Fixed regular expressions and Added
	new expression for checking return probe's stacktrace on ia64.
	* systemtap.context/backtrace.stp (print_all_trace_info): Added
	trace point output before calling print_stack().

2008-02-06  Masami Hiramatsu  <mhiramat@redhat.com>

	* systemtap.base/cmd_parse.exp: Added 'wait' between tests for