@@ -1,5 +1,10 @@
 2008-02-23  Frank Ch. Eigler  <fche@elastic.org>
 
+	* systemtap.samples/args.exp: Remove installation-specific paths from
+	pass/fail judgements.
+
+2008-02-23  Frank Ch. Eigler  <fche@elastic.org>
+
 	* */*.exp: Change all "send \003" to "exec kill -INT -<pgrp>" in order
 	to more reliably kill an inferior stap/stapio/staprun process group.
 
